--- a/test.html
+++ b/test.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 
+  <img src="/Users/Ryan/KUBootcamp_Projects/Sat_1-13/3_LayoutNoFloat/SiteDesignGoal.png" width="350">
+
+
 <label>Hello</label>
 
 </body>
