--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-  <img src="/Users/Ryan/KUBootcamp_Projects/Sat_1-13/3_LayoutNoFloat/SiteDesignGoal.png" width="350">
-
+  <img src="http://images4.fanpop.com/image/photos/14700000/So-cute-puppies-14749029-1600-1200.jpg" width="350">
 
 <label>Hello</label>
 
